--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Checker</title>
+    <title>冷蔵庫管理ツール</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,5 +11,6 @@
 
   <body>
     <%= yield %>
-  </body>
+  </body> 
+
 </html>
