--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -7,13 +7,13 @@
       <div class="btn-topic">
          <%= link_to "コンセプト", concept_path, class: "topic1" %>
          <%= link_to "食材一覧", "#", class: "topic2" %>
-         <%= link_to "食材を追加する", "#", class: "topic3" %>
+         <%= link_to "食材を追加する", new_item_path, class: "topic3" %>
       </div>
      <% else %>
       <div class="btn-topic">
          <%= link_to "コンセプト", concept_path, class: "topic1" %>
          <%= link_to "ユーザー検索", search_path, class: "topic2" %>
-         <%= link_to "食材を追加する", "#", class: "topic3" %>
+         <%= link_to "食材を追加する", new_item_path, class: "topic3" %>
       </div>
      <% end %>
     </div>
