--- a/app/views/layouts/concept.html.erb
+++ b/app/views/layouts/concept.html.erb
@@ -23,8 +23,6 @@
     </ul> 
      <p>このような状況が日常的である日本では、食品ロスが社会問題になっています。<br>
         主な原因としては、「食べ残し」「傷んでいた」「賞味期限・賞味期限」などが挙げられています。</p><br>
-        <%# 消費者側の行動を少し直すだけで、食品ロス削減の可能性があると考えています。</p><br> %>
-
   </div>
 
   <div id="food-loss">
@@ -49,6 +47,9 @@
       <p>一人ひとりが生活を見直して、出来ることを1つずつ取り組んでいきましょう！</p>
       <p>食品を購入する前に、一度冷蔵庫の状況を確認してみませんか？</p><br>
    </div>
- </div>
+   
+    <div class="back-top-page">
+      <%=link_to 'トップページに戻る', root_path, class:"back-page" %>
+    </div>
 </div>
 
