--- a/app/assets/stylesheets/user/concept.css.scss
+++ b/app/assets/stylesheets/user/concept.css.scss
@@ -42,7 +42,8 @@
 }
 
 .concept-image {
-  background-image: url("roses-5663972_640.jpg");
+  background-image: image-url("roses-5663972_640.jpg");
+  // background-image: asset-url("roses-5663972_640.jpg");
   width: 100%;
   height: 900px;
   padding-top: 20px;
