--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,7 +6,7 @@
      <% if user_signed_in? %>
       <div class="btn-topic">
          <%= link_to "コンセプト", concept_path, class: "topic1" %>
-         <%= link_to "食材一覧", "#", class: "topic2" %>
+         <%= link_to "食材一覧", item_path(current_user.id), class: "topic2" %>
          <%= link_to "食材を追加する", new_item_path, class: "topic3" %>
       </div>
      <% else %>
