--- a/app/assets/stylesheets/user/concept.scss
+++ b/app/assets/stylesheets/user/concept.scss
@@ -84,6 +84,7 @@
 	color: #fff;
 	border-radius: 100px;
 }
+
 #todo ul {
   margin-left: 400px;
  }
@@ -100,6 +101,10 @@
 	background: #222;
 	color: #fff;
 	border-radius: 100px;
+}
+
+.back-top-page {
+  margin-bottom: 100px;
 }
 
 
