--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -48,7 +48,14 @@ main {
   // background-image: asset-url("harvest-3679075_640.jpg");
   background-size: cover;
   text-align: center;
+  // position: relative;
 }
+// .main-icon {
+//  bottom: 40px;
+//  position: absolute;
+//  top: 140px;
+//  background-size: cover;
+// }
 
 .contents {
   max-width: 1170px;
