レスポンシブデザイン

--- a/app/assets/stylesheets/item/index.css
+++ b/app/assets/stylesheets/item/index.css
@@ -16,7 +16,7 @@
 .food-content {
   display: inline;
   float: left;
-  margin: 20px;
+  margin: 20px 0 0 20px;
   padding: 10px;
   font-size: 20px;
   border: cadetblue 2px solid;
