--- a/app/views/items/main.html.erb
+++ b/app/views/items/main.html.erb
@@ -13,7 +13,7 @@
      <% else %>
       <div class="btn-topic">
          <%= link_to "コンセプト", concept_path, class: "topic1" %>
-         <%= link_to "みんなの食材", search_path, class: "topic2" %>
+         <%= link_to "食材一覧", search_path, class: "topic2" %>
          <%= link_to "食材を追加する", new_item_path, class: "topic3" %>
       </div>
      <% end %>
