--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -2,6 +2,8 @@
   text-align: center;
 }
 
+/* session.cssでも反映 */
+
 h2 {
   border-bottom: tan 2px solid;
   margin-bottom: 30px;
@@ -36,4 +38,31 @@ input[type="password"] {
 
 .exit {
   font-size: 20px;
+}
+
+/* // レスポンシブデザイン */
+
+ /* タブレット表示時 */
+ @media (max-width: 1024px) {
+
+}
+
+ /* スマホ表示時 */
+@media (max-width: 599px) {
+  html {
+    margin: 0px;
+  }
+  .session-main {
+    width: 100%;
+    height: 500px;
+  }
+
+  .actions {
+    margin-bottom: 50px;
+  }
+
+  .exit {
+    font-size: 10px;
+    margin-bottom: 50px;
+  }
 }
