--- a/app/assets/stylesheets/user/search.css
+++ b/app/assets/stylesheets/user/search.css
@@ -1,23 +1,53 @@
-.search {
-  width: 100%;
-  height: 100%;
+.search input{
+  padding: 20px;
+}
+
+.search-form {
+  position: relative;
+}
+
+.search-input {
   position: absolute;
+  top: 150px;
+  left: 550px;
+  width: 500px;
 }
 
-.search-nav p {
-  position: relative;
-  top: 200px;
-  left: 20px;
-  width: 30%;
-  text-align: center;
-  border: black 1px solid;
-  padding: 20px 0;
+.search-btn{
+  position: absolute;
+  top: 150px;
+  left: 1150px;
 }
 
-.search-main p{
+.search-users {
   position: relative;
-  top: 80px;
-  left: 1400px;
-  width: 70%;
-  font-size: 30px;
+  margin: 0 auto;
+}
+
+.search-explanation {
+  position: relative;
+  font-size: 25px;
+}
+
+.details {
+  position: absolute;
+  top: 350px;
+  left: 500px;
+}
+
+.results {
+  position: absolute;
+  top: 250px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.result {
+  margin: 20px;
+  padding: 10px;
+  font-size: 20px;
+  border: cadetblue 2px solid;
+  background-color: rgba(94, 160, 81, 0.7);
 }
