--- a/app/views/devise/shared/_header.html.erb
+++ b/app/views/devise/shared/_header.html.erb
@@ -9,14 +9,14 @@
         <%= "ユーザー名：#{current_user.nickname}さん"%>
       </div>
      <div class="login">
-        <%= link_to "マイページ", root_path, class: "mypage"%>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete ,class: "mypage"%>
+        <%= link_to "マイページ", root_path, class: "mypage1"%>
+        <%= link_to "ログアウト", destroy_user_session_path, method: :delete ,class: "mypage2"%>
      </div>
     </div>
   <% else %>
   <div class="signin">
-    <%= link_to "新規登録", new_user_registration_path, class: "post" %>
-    <%= link_to "ログイン", new_user_session_path, class: "post" %>
+    <%= link_to "新規登録", new_user_registration_path, class: "post1" %>
+    <%= link_to "ログイン", new_user_session_path, class: "post2" %>
   </div>
   <% end %>
   </div>
