--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,10 +1,9 @@
- <%= form_with(model: @item, url: items_path, local: true) do |f| %>
-
+ <%# <%= form_with(model: @item, url: items_path, local: true) do |f| %> 
 　<div class="items-contents">
 
   <div class="items-main">
     <h2 class="items-title">食材の追加</h2>
-
+     <%= form_with(model: @item, url: items_path, local: true) do |f| %> 
      <%=  render 'devise/shared/error_messages', model: f.object %>
 
     <%# 商品購入日 %>
