--- a/app/views/layouts/concept.html.erb
+++ b/app/views/layouts/concept.html.erb
@@ -21,15 +21,15 @@
      <li>安くなっていたから購入した野菜を、使わずに捨ててしまった。</li>
      <li>家にあると思っていた調味料が、無くて思うような料理が出来なかった。</li><br>
     </ul> 
-     <p>このような状況が日常的である日本では、食品ロスが社会問題になっています。<br>
-        主な原因としては、「食べ残し」「傷んでいた」「賞味期限・賞味期限」などが挙げられています。</p><br>
+     <p>このような状況が日常の日本では、食品ロスが社会問題になっています。<br>
+        主な原因として、「食べ残し・傷んでいた・賞味/賞味期限切れ」などが挙げられています。</p><br>
   </div>
 
   <div id="food-loss">
     <h4>食品ロスの現状</h4>
      <p>食品ロスとは、食べられるのに捨てられている食品のことを指します。</p>
-     <p>日本の食品ロスは年間約600万トンと推計され、その半分が家庭からの食品ロス（約300万トン）になります。</p>
-     <p>現在では各自治体で対策が講じられるなどと、食品ロスの削減への取り組みが増加しています。</p>
+     <p>日本の食品ロスは年間約600万トンと推計され、<br>その半分が家庭からの食品ロス（約300万トン）になります。</p>
+     <p>現在では各自治体で対策が講じられるなどと、<br>食品ロスの削減への取り組みが増加しています。</p>
      <p>私たち、一人ひとりも家庭内で出来ることに取り組んでみませんか？</p><br>
   </div>
     
@@ -44,7 +44,7 @@
 
    <div id="message">
      <h4> 最後に</h4>
-      <p>一人ひとりが生活を見直して、出来ることを1つずつ取り組んでいきましょう！</p>
+      <p>一人ひとりが生活を見直し、出来ることを1つずつ取り組んでいきましょう！</p>
       <p>食品を購入する前に、一度冷蔵庫の状況を確認してみませんか？</p><br>
    </div>
    
