--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -17,9 +17,9 @@
           <%= "賞味期限：#{item.sell_by}"%><br>
           <%= "メモ：#{item.memo}"%><br>
 
-          <%= link_to '詳細', item_path(item.id) %>
-          <%= link_to '編集', edit_item_path(item.id) %>
-          <%= link_to '処分', item_path(item.id), method: :delete %><br>
+          <%= link_to '詳細', item_path(item.id), class:"btn show" %>
+          <%= link_to '編集', edit_item_path(item.id), class:"btn edit" %>
+          <%= link_to '処分', item_path(item.id), method: :delete, class:"btn destroy" %><br>
         </div>
        <% end %>
    <% end %>
