--- a/app/assets/stylesheets/item/new.css
+++ b/app/assets/stylesheets/item/new.css
@@ -1,3 +1,5 @@
+/* editアクション同様 */
+
 .items-contents {
  width: 100%;
  height: 100%;
@@ -33,4 +35,26 @@
 
 .hidden2{
   display: none;
+}
+
+
+ /* タブレット表示時 */
+
+ @media (max-width: 1024px) {
+
+}
+
+
+ /* スマホ表示時 */
+
+@media (max-width: 599px) {
+
+.items{
+  font-size: 20px;
+}
+
+.items span {
+  font-size: 15px;
+}
+
 }
