--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -10,6 +10,13 @@ body {
   height: 100%;
 }
 
+/*リンク（全般）設定
+---------------------------------------------------------------------------*/
+a {
+  transition: 0.7s;
+  text-decoration: none;
+}
+
 /*header
 ---------------------------------------------------------------------------*/
 
@@ -29,6 +36,7 @@ body {
   margin: 10px 0;
   height: 40px;
   float: left;
+  text-decoration: none;
 }
 
 .user-name{
@@ -49,12 +57,11 @@ body {
    font-size: 20px;
  }
 
+ .mypage1:hover {
+  font-size: 30px;
+  color: navy;
+}
  .mypage1 {
-   position: absolute;
-   right: 130px;
- }
-
- .mypage2 {
    position: absolute;
    right: -10px;
  }
@@ -80,15 +87,23 @@ body {
   font-size: 20px;
 }
 
+.post1:hover {
+  background-color: rgba(235, 97, 97, 0);
+  transform: scale(1.3);
+}
+.post2:hover {
+  background-color: rgba(50, 16, 143, 0);
+  transform: scale(1.3);
+}
 
 /*メニュー（main.html.erb）
 ---------------------------------------------------------------------------*/
 main {
-  background-image: image-url("harvest-3679075_640.jpg");
-  width: 100%;
-  height: auto;
+  background-image: url("nadezhda-filatova-1pP5YVAQWrM-unsplash.jpg"); 
   background-size: cover;
   text-align: center;
+  width: 100%;
+  height: auto;
 }
 
 .contents {
@@ -184,6 +199,16 @@ main {
   /*ヘッダー
   ---------------------------*/
 
+  .header {
+    position: fixed;
+    z-index: 10;
+    border-bottom: black 2px solid;
+    height: 100px ;
+  }
+
+  .header-top a {
+    font-size: 30px;
+  }
   .signin a {
     display: block;
     float: right;
@@ -199,12 +224,8 @@ main {
    .login a{
      font-size: 20px;
    }
+
    .mypage1 {
-     position: absolute;
-     top: -10px;
-     right: 120px;
-   }
-   .mypage2 {
      position: absolute;
      top: -10px;
      right: -10px;
@@ -223,10 +244,11 @@ main {
      right: 70px;
    }
 
+
   /*main.html.erb
   ---------------------------*/
     main {
-      background-image: image-url("harvest-3679075_640.jpg");
+      background-image: url("italic-BULatMmIxRA-unsplash.jpg");
       width: auto 0;
     }
 
@@ -252,10 +274,10 @@ main {
       
  /*フッター
   ---------------------------*/
-   .footer {
-    height: 70px;
-    font-size: 14px;
-   }
+    .footer {
+      height: 70px;
+      font-size: 14px;
+    }
 
 }
 
@@ -294,12 +316,8 @@ main {
    .login a{
      font-size: 20px;
    }
+
    .mypage1 {
-     position: absolute;
-     top: 60px;
-     left: 50px;
-   }
-   .mypage2 {
      position: absolute;
      top: 60px;
      left: 200px;
@@ -317,7 +335,7 @@ main {
  /*main.html.erb
   ---------------------------*/
   .contents {
-    background-image: image-url("harvest-3679075_640.jpg");
+    background-image: url("italic-BULatMmIxRA-unsplash.jpg");
     background-size: cover;
   }
 
