--- a/app/assets/stylesheets/user/concept.css
+++ b/app/assets/stylesheets/user/concept.css
@@ -1,4 +1,6 @@
-/* コンセプトページ */
+/* コンセプトページ
+---------------------------------------------------------------------------*/
+
 
 .concept-main {
  height: 100%;
@@ -35,7 +37,34 @@
   display: block;
   padding: 20px;
   font-size: 20px;
+  text-decoration: none;
 }
+
+
+.concept1:hover{
+  color: rgba(136, 55, 24, 0.3);
+}
+
+.concept2:hover{
+  color: rgba(136, 55, 24, 0.3);
+}
+
+.concept3:hover{
+  color: rgba(136, 55, 24, 0.3);
+}
+
+.concept4:hover{
+  color: rgba(136, 55, 24, 0.3);
+}
+
+.concept5:hover{
+  color: rgba(136, 55, 24, 0.3);
+}
+
+.back-page:hover{
+  color: rgba(136, 55, 24, 0.3);
+}
+
 
 .concept-sub{
   margin: 0px auto;
@@ -49,14 +78,16 @@
 }
 
 .concept-image {
-  background-image: image-url("roses-5663972_640.jpg");
+  background-image: url("roses-5663972_640.jpg");
   width: 100%;
   height: 900px;
   padding-top: 20px;
   background-size: cover;
 }
 
-/* ページ内、リンク移動 */
+/* ページ内、リンク移動 
+---------------------------------------------------------------------------*/
+
 .messages h4{
   margin-bottom: 20px;
 	padding: 0 20px;
@@ -104,7 +135,7 @@
   text-align: left;
  }
 
-#message h4{
+#last h4{
   margin-bottom: 20px;
 	padding: 0 20px;
 	font-size: 20px;
@@ -120,7 +151,9 @@
 
 
 
- /* タブレット表示時 */
+ /* タブレット表示時 
+ ---------------------------------------------------------------------------*/
+
  @media (max-width: 1024px) {
 
  .concept-sub {
@@ -199,13 +232,15 @@
     display: list-item;
   }
 
-  #message p {
+  #last p {
     font-size: 7px;
   }
 }
 
 
- /* スマホ表示時 */
+ /* スマホ表示時 
+ ---------------------------------------------------------------------------*/
+
 @media (max-width: 599px) {
 
   .concept-sub {
