--- a/app/assets/stylesheets/user/session.css
+++ b/app/assets/stylesheets/user/session.css
@@ -1,5 +1,18 @@
-.session-main{
+
+.session {
+  width: 100%;
+  height: 100%;
   text-align: center;
+}
+
+.session-input {
+  width: 50vw;
+  height: 70vh;
+  display: inline-block;
+  text-align: center;
+  padding: 50px 20px 20px 20px;
+  border: rosybrown 3px dotted;
+  background-color: rgba(220, 136, 68, 0.2);
 }
 
 .exit a {
@@ -9,28 +22,42 @@
 }
 
 
-
  /* タブレット表示時 */
  @media (max-width: 1024px) {
+  
+  .session-input {
+    width: 70vw;
+    height: 80vh;
+  }
 
 }
 
  /* スマホ表示時 */
-@media (max-width: 599px) {
-  html {
-    margin: 0px;
-  }
-  .session-main {
-    width: 100%;
-    height: 500px;
-  }
+  @media (max-width: 599px) {
 
-  .actions {
-    margin-bottom: 50px;
-  }
+    .session-input {
+      width: 95vw;
+      height: 70vh;
+    }
 
-  .exit {
-    font-size: 10px;
-    margin-bottom: 50px;
+    input[type="email"] {
+      width: 350px;
+     }
+   
+   input[type="password"] {
+      width: 350px;
+     }
+
+    html {
+      margin: 0px;
+    }
+
+    .actions {
+      margin-bottom: 50px;
+    }
+
+    .exit {
+      font-size: 10px;
+      margin-bottom: 50px;
+    }
   }
-}
