--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,58 +1,59 @@
-<%# <%= form_with model: @user, url: new_user_registration_path , class: 'registration-main', local: true do |f| %> 
-<%# <%= link_to "新規登録", root_path,class: "top-page" %> 
- <h2>新規登録</h2>
+
 <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
+ <h2>新規登録</h2>
 
-
-<%# <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %> 
   <%= render "devise/shared/error_messages", model: f.object %>
 
-  <div class="field">
-   <div class='field-label'>
-    <%= f.label :nickname %><br />
-   </div>
-    <div class='field-input'>
-    <%= f.text_area :nickname, autofocus: true, autocomplete: "nickname" , placeholder:"ニックネーム名を入力ください",size: "40"%>
-   </div>
-  </div>
+<div class="registration">
+    <div class="registration-input">
+      <div class="field">
+        <div class='field-label'>
+          <%= f.label :nickname %><br />
+        </div>
+          <div class='field-input'>
+          <%= f.text_area :nickname, autofocus: true, autocomplete: "nickname" , placeholder:"ニックネーム名を入力ください",size: "38"%>
+        </div>
+      </div>
 
-  <div class="field">
-   <div class='field-label'>
-    <%= f.label :email %><br />
-   </div>
-    <div class='field-input'>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" , placeholder:"ご自身のメールアドレスを入力ください",size: "50"%>
-   </div>
-  </div>
+      <div class="field">
+        <div class='field-label'>
+          <%= f.label :email %><br />
+        </div>
+          <div class='field-input'>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" , placeholder:"ご自身のメールアドレスを入力ください",size: "50"%>
+        </div>
+      </div>
 
-  <div class="field">
-   <div class='field-label'>
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-     <%= "(英数字6文字以上)"%>
-   </div>
-    <% end %><br />
-    <div class='field-input'>
-    <%= f.password_field :password, autocomplete: "new-password" , placeholder:"英数字6文字以上のパスワードを入力ください",size: "50"%>
-   </div>
+      <div class="field">
+        <div class='field-label'>
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+          <%= "(英数字6文字以上)"%>
+        </div>
+          <% end %><br />
+          <div class='field-input'>
+          <%= f.password_field :password, autocomplete: "new-password" , placeholder:"英数字6文字以上のパスワードを入力ください",size: "50"%>
+        </div>
+      </div>
+
+      <div class="field">
+        <div class='field-label'>
+          <%= f.label :password_confirmation %><br />
+        </div>
+          <div class='field-input'>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:"同じパスワードを入力ください" ,size: "50"%>
+        </div>
+      </div>
+
+        <div class="actions">
+          <%= f.submit "登録", class: 'btn' %>
+        </div>
+
+        <div class="exit">
+          <%= link_to "トップページに戻る", root_path,class: "top-page" %>
+        </div>
+    </div>
 </div>
-  <div class="field">
-   <div class='field-label'>
-    <%= f.label :password_confirmation %><br />
-   </div>
-    <div class='field-input'>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:"同じパスワードを入力ください" ,size: "50"%>
-   </div>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "登録", class: 'btn' %>
-  </div>
-
-  <div class="exit">
-    <%= link_to "トップページに戻る", root_path,class: "top-page" %>
-  </div>
 
 <% end %>
 
-<%# <%= render "devise/shared/links" %> 
