--- a/app/views/layouts/concept.html.erb
+++ b/app/views/layouts/concept.html.erb
@@ -2,11 +2,11 @@
   <div class="concept-image">
     <div class="btn-concept">
       <p>コンセプト</p>
-      <%= link_to "メッセージ","#example" , class: "concept1" %>
-      <%= link_to "食品ロスの現状", "#food-loss", class: "concept2" %>
-      <%= link_to "家庭内で出来ること", "#todo", class: "concept3" %>
-      <%= link_to "最後に", "#message", class: "concept4" %><br><br><br>
-      <%= link_to "トップページに戻る", root_path, class: "concept5" %>
+        <%= link_to "メッセージ","#example" , class: "concept1" %>
+        <%= link_to "食品ロスの現状", "#food-loss", class: "concept2" %>
+        <%= link_to "家庭内で出来ること", "#todo", class: "concept3" %>
+        <%= link_to "最後に", "#message", class: "concept4" %><br><br><br>
+        <%= link_to "トップページに戻る", root_path, class: "concept5" %>
     </div>
    </div>
   <div class="concept-sub">
@@ -42,12 +42,13 @@
      </ul>
    </div>
 
-   <div id="message">
+   <div id="last">
      <h4> 最後に</h4>
       <p>一人ひとりが生活を見直し、出来ることを1つずつ取り組んでいきましょう！</p>
       <p>食品を購入する前に、一度冷蔵庫の状況を確認してみませんか？</p><br>
    </div>
    
+
     <div class="back-top-page">
       <%=link_to 'トップページに戻る', root_path, class:"back-page" %>
     </div>
