--- a/app/assets/stylesheets/user/concept.scss
+++ b/app/assets/stylesheets/user/concept.scss
@@ -78,7 +78,7 @@
 }
 
 .concept-image {
-  background-image: url("roses-5663972_640.jpg");
+  background-image: image-url("roses-5663972_640.jpg");
   width: 100%;
   height: 900px;
   padding-top: 20px;
