ユーザー制限調整・単体テストの修正

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -46,7 +46,7 @@
       </div>
 
         <div class="actions">
-          <%= f.submit "登録", class: 'btn' %>
+          <%= f.submit "登録", class: 'btn', data: { confirm: "【確認】下記のお客様登録を登録しますか？" }  %>
         </div>
 
         <div class="exit">
