--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -57,7 +57,7 @@
         <div class="items">
          メモ(任意) 
         </div>
-       <%= f.text_area :memo, class:"item-memo", id:"item-memo", placeholder:"♦（例）賞味期限が近づいているので早く消費する。", size: "40" %>
+       <%= f.text_area :memo, class:"item-memo", id:"item-memo", placeholder:"（例）賞味期限が近づいているので早く消費する。", size: "40" %>
      </div>
     </div>
     <%# /商品の賞味期限・メモ %>
