--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -54,7 +54,7 @@
         <div class="items">
          メモ(任意) 
         </div>
-       <%= f.text_area :memo, class:"item-memo", id:"item-memo", placeholder:"♦（例）残り3本",size: "40" %>
+       <%= f.text_area :memo, class:"item-memo", id:"item-memo", placeholder:"こちらは食材一覧から公開されます。非公開の内容の場合、食材登録後にコメントをお使いください。",size: "40" %>
      </div>
     </div>
     <%# /商品の賞味期限・メモ %>
