--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -18,7 +18,7 @@
 
         <div class="field-comment">
           <%= f.label :text, "コメント" %><br />
-          <%= f.text_field :text , placeholder:"例）近所の安倍さんからの頂き物。", size: "50" ,class: "text"  %>
+          <%= f.text_field :text , placeholder:"#{@item.user.nickname}さんのみ閲覧できるプライベート空間です。", size: "50" ,class: "text"  %>
         </div>
         <div class="actions">
           <%= f.submit "送信する", class: :form__btn  %>
