ビューの修正

--- a/app/assets/stylesheets/user/concept.scss
+++ b/app/assets/stylesheets/user/concept.scss
@@ -40,31 +40,9 @@
   text-decoration: none;
 }
 
-
-.concept1:hover{
+.botton:hover{
   color: rgba(136, 55, 24, 0.3);
 }
-
-.concept2:hover{
-  color: rgba(136, 55, 24, 0.3);
-}
-
-.concept3:hover{
-  color: rgba(136, 55, 24, 0.3);
-}
-
-.concept4:hover{
-  color: rgba(136, 55, 24, 0.3);
-}
-
-.concept5:hover{
-  color: rgba(136, 55, 24, 0.3);
-}
-
-.back-page:hover{
-  color: rgba(136, 55, 24, 0.3);
-}
-
 
 .concept-sub{
   margin: 0px auto;
