--- a/app/views/layouts/concept.html.erb
+++ b/app/views/layouts/concept.html.erb
@@ -2,11 +2,11 @@
   <div class="concept-image">
     <div class="btn-concept">
       <p>コンセプト</p>
-        <%= link_to "メッセージ","#example" , class: "concept1" %>
-        <%= link_to "食品ロスの現状", "#food-loss", class: "concept2" %>
-        <%= link_to "家庭内で出来ること", "#todo", class: "concept3" %>
-        <%= link_to "最後に", "#message", class: "concept4" %><br><br><br>
-        <%= link_to "トップページに戻る", root_path, class: "concept5" %>
+        <%= link_to "メッセージ","#example" , class: "botton concept1" %>
+        <%= link_to "食品ロスの現状", "#food-loss", class: "botton concept2" %>
+        <%= link_to "家庭内で出来ること", "#todo", class: "botton concept3" %>
+        <%= link_to "最後に", "#message", class: "botton concept4" %><br><br><br>
+        <%= link_to "トップページに戻る", root_path, class: "botton concept5" %>
     </div>
    </div>
   <div class="concept-sub">
