--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -12,7 +12,7 @@
    <% if @item == nil %>
     <div class="search-explanation">
 　　　<div class="details">
-      <h1>ログインなしに、ユーザー名の検索で食材の確認ができます。</h1>
+      <h1>ユーザー名の検索で現在の冷蔵庫内を確認できます。</h1>
       <h1>検索後に何も表示されない場合は、登録がありません。</h1>
       <h1>＊食材の追加・編集などはログインが必要です。</h1>
      </div>
